--- a/views/layouts/admin.ejs
+++ b/views/layouts/admin.ejs
@@ -4,20 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="<%= locals.description %>" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <title><%= locals.title %></title>
+    <meta name="description" content="<%= locals.description %>" />
     <link rel="stylesheet" href="/css/styles.css" />
     <script type="text/javascript" defer src="/js/script.js"></script>
   </head>
   <body>
-    <%- include('../partials/search.ejs') %>
-
     <div class="container">
-      <%- include('../partials/header.ejs') %>
-        
+      <%- include('../partials/header_admin.ejs') %>
       <main class="main"><%- body %></main>
-
       <%- include('../partials/footer.ejs') %>
     </div>
   </body>
